--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 						</div>
 						<div class="col-8 col-7-large col-12-medium">
 							<header>
-								<h1><strong>Miller Jackson feature a</strong></h1>
+								<h1><strong>Miller Jackson Digital</strong></h1>
 							</header>
 <p>Online business development for local attorneys that actually works (just ask our clients)</p>
 							<a href="#work" class="button large scrolly">What we do</a>
